[project]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Алексей Коновалов",email = "lex-sorokin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "coursework_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
