[project]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Алексей Коновалов",email = "lex-sorokin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.17.0,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "pandas-stubs (>=2.3.0.250703,<3.0.0.0)",
    "types-python-dateutil (>=2.9.0.20250708,<3.0.0.0)",
    "types-requests (>=2.32.4.20250611,<3.0.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
/(
\.venv|
\.git|
\.mypy_cache|
\.pytest_cache|
build|
dist
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = 'venv'

[tool.poetry]
packages = [{include = "coursework_1", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
